...
    <string name="search_back_button_content_description">Go back</string>
    <string name="search_clear_query_content_description">Clear query</string>
    <string name="search_icon_content_description">Search</string>
    <string name="filter_hint_filter_my_lists_and_articles">Filter my collections</string>
    <string name="nav_item_suggested_edits">Edits</string>
    <string name="nav_item_activity">Activity</string>
    <string name="nav_item_more">More</string>
    <string name="nav_item_search">Search</string>
    <string name="nav_item_contribute">Contribute</string>
    <string name="error_network_error">Cannot connect to the Internet.</string>
    <string name="page_error_retry">Retry</string>
    <string name="card_offline_error_retry">Retry</string>
    <string name="storage_access_error_retry">Retry</string>
...
    <string name="account_creation_password_hint">Password</string>
    <string name="login_2fa_hint">Two-factor authentication code</string>
    <string name="login_2fa_other_workflow_error_msg">Two-factor authentication required! Please login from the main screen, and enter the code from your 2FA token.</string>
    <string name="login_email_auth_hint">Email verification code</string>
    <string name="login_email_auth_other_workflow_error_msg">Email verification required! Please login from the main screen, and enter your email verification code.</string>
    <string name="login_background_error_msg">Unable to re-login. Please go back to the main screen and log in manually.</string>
    <string name="onboarding_card_login">Log in</string>
    <string name="page_editing_login">Log in</string>
    <string name="reading_lists_sync_login">Log in</string>
    <string name="create_account_login">Log in</string>
    <string name="menu_login">Log in</string>
    <string name="login_activity_title">Log in</string>
    <string name="login_in_progress_dialog_message">Logging you in…</string>
...
    <string name="search_empty_message">Search and read the free encyclopedia in your language</string>
    <string name="search_empty_message_multilingual_upgrade">Search Wikipedia in more languages</string>
    <string name="delete_selected_items">Delete selected items</string>
    <string name="wp_stylized"><![CDATA[<big>W</big>IKIPEDI<big>A</big>]]></string>
    <string name="create_account_username_hint">Username</string>
    <string name="login_dont_have_account">Don\'t have an account?</string>
    <string name="login_join_wikipedia">Join Wikipedia</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="create_account_already_have">Already have an account?</string>
    <string name="create_account_activity_title">Create an account</string>
    <string name="dialog_create_account_checking_progress">Verifying</string>
    <string name="create_account_email_hint">Email (Optional)</string>
    <string name="create_account_password_repeat_hint">Repeat password</string>
...
    <string name="article_header_edit_description">Edit article description</string>
    <string name="article_header_edit_lead_section">Edit introduction</string>
    <!-- /Article menu bar -->

    <!-- Theme -->
    <string name="color_theme_select">Theme</string>
    <string name="color_theme_light">Light</string>
    <string name="color_theme_dark">Dark</string>
    <string name="color_theme_black">Black</string>
    <string name="color_theme_sepia">Sepia</string>
    <string name="color_theme_test_title">Sample text</string>
    <string name="color_theme_test_text">Drag the slider to change the size of the text that is used when reading articles. To set the text size throughout the rest of the app, change your system text size.</string>
    <string name="preference_title_app_theme">App theme</string>
    <string name="preference_summary_color_theme">Switch to using the app\'s dark color theme</string>
    <string name="text_size_increase">Increase text size</string>
...
