...

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/fragment_onboarding_skip_button"
                style="@style/App.Button.Text.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_skip" />

            <com.google.android.material.tabs.TabLayout
...
