...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_already_have"
        android:textColor="?attr/material_theme_primary_color" />

    <Button
        android:id="@+id/create_account_login_button"
        style="@style/TransparentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_login"
        android:textColor="?attr/colorAccent" />

...
