...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:clipChildren="false">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_theme_light"
                    style="@style/ThemeColorCircularButton"
                    android:layout_margin="5dp"
                    android:textColor="@color/gray700"
                    android:backgroundTint="@color/color_state_white"/>

                <com.google.android.material.button.MaterialButton
...
                    style="@style/ThemeColorCircularButton"
                    android:layout_margin="5dp"
                    android:textColor="@color/gray700"
                    android:backgroundTint="@color/beige300"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_theme_dark"
                    style="@style/ThemeColorCircularButton"
                    android:layout_margin="5dp"
                    android:textColor="@color/gray100"
                    android:backgroundTint="@color/color_state_gray" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_theme_black"
                    style="@style/ThemeColorCircularButton"
                    android:layout_margin="5dp"
                    android:textColor="@color/gray100"
                    android:backgroundTint="@color/color_state_black" />

            </LinearLayout>
...
